Fixed high-contrast mode: Back button now regular color unless hovered

--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -270,6 +270,11 @@ button.blue {
   color: white;
 }
 
+button.backButton {
+  background-color: lightgray;
+  color: black;
+}
+
 button.black {
   background-color: black;
   color: white;
